Carousel not visible issue resolution

--- a/marketing-lead2loyalty/apps-lead2loyalty/ui.apps/src/main/content/jcr_root/apps/lead2loyalty/components/content/clientlibs/lead2loyalty-homepage/css/lead2loyalty.css
+++ b/marketing-lead2loyalty/apps-lead2loyalty/ui.apps/src/main/content/jcr_root/apps/lead2loyalty/components/content/clientlibs/lead2loyalty-homepage/css/lead2loyalty.css
@@ -732,3 +732,7 @@ a.text-decoration-none {
 .modal-backdrop:nth-child(2n-1) {
   opacity : 0;
 }
+
+.cmp-carousel__item--active {
+	display: block !important;
+}
